--- a/about.html
+++ b/about.html
@@ -24,6 +24,19 @@
         <nav class="menu">
             <div class="menu-branding">
                 <div class="portrait"></div>
+               
+                    <div class="icons">
+                        <a href="https://www.facebook.com/yakov.sachuk/" taget="_blank">
+                            <i class="fab fa-facebook fa-2x"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/yakov-sachuk-24414721a/" target="_blank">
+                            <i class="fab fa-linkedin fa-2x"></i>
+                        </a> 
+                        <a href="https://github.com/jekoob" target="_blank">
+                            <i class="fab fa-github fa-2x"></i>
+                        </a> 
+                    </div>
+                
             </div>
             <ul class="menu-nav">
                 <li class="nav-item">
