--- a/work.html
+++ b/work.html
@@ -89,7 +89,7 @@
 
             <div class="item">
                 <a href="#!">
-                    <img src="../img/project.jpg" alt="">
+                    <img src="img/Project.jpg" alt="">
                 </a>
                 <a href="" class="btn-light">
                     <i class="fas fa-eye"></i>project
@@ -113,7 +113,7 @@
 
             <div class="item">
                 <a href="#!">
-                    <img src="img/project.jpg" alt="">
+                    <img src="img/Project.jpg" alt="">
                 </a>
                 <a href="" class="btn-light">
                     <i class="fas fa-eye"></i>project
@@ -125,7 +125,7 @@
 
             <div class="item">
                 <a href="#!">
-                    <img src="img/project.jpg" alt="">
+                    <img src="img/Project.jpg" alt="">
                 </a>
                 <a href="" class="btn-light">
                     <i class="fas fa-eye"></i>project
